2004-11-09 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/WriteGedcom.py: Remove extraneous import.

2004-11-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateHandler.py: add handlers for fr_FR
	* src/DateParser.py: add parser for french
	* src/DateDisplay.py: add displayer for french

2004-11-08  Steve Swales  <Steve.Swales@sun.com>
	* src/gramps.py: Better way of setting locale
	* src/DateHandler.py: Better locate settings

2004-11-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/data/Makefile.am: Remove gramps.desktop from
        dist_pkgdata_DATA which was causing it to get installed
        under .../share/gramps.

2004-11-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: load global note in a read only buffer
	* src/gramps.glade: change buttons to icons, add global note
	on image properties editor

2004-11-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateHandler.py: handle en_GB, en_AU and en_CA locales

2004-11-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: Add date/place property to media objects
	* src/ReadXML.py: Add date/place property to media objects
	* src/RelLib.py: Add date/place property to media objects
	* src/WriteXML.py: Add date/place property to media objects
	* src/gramps.glade: Add date/place property to media objects
	* src/SelectObject.py: display gramps id instead of internal handle

	* src/gramps_main.py: fix setting of active person on history change

2004-11-05 Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Include non-marriage relationships.

	* src/StartupDialog.py: Fixed typo (gtk.quit -> gtk.main_quit).

2004-11-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py (Gramps.redraw_histmenu): use GRAMPS
	id instead of internal ID for history menu

2004-10-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fixed home person button
