@@ -1,6 +1,9 @@
 2004-11-09 Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/WriteGedcom.py: Remove extraneous import.
 
+	* src/DateHandler.py: Start adding handlers for Russian.
+	* src/DateParser.py: Start adding handlers for Russian.
+
 2004-11-08  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/DateHandler.py: add handlers for fr_FR
 	* src/DateParser.py: add parser for french
